Actualizar ruta de imagenes

--- a/catalogo.html
+++ b/catalogo.html
@@ -18,7 +18,7 @@
         <div class="product">
             <h2>Naranjas</h2>
             <h4>Kg x 2.000$</h4>
-            <img src="C:\xampp\htdocs\FormularioDesarrolloWeb\naranja.jpg" alt="Producto 1" width="200" height="200">
+            <img src="D:\Herramientas III\FormularioElectivaWeb\naranja.jpg" alt="Producto 1" width="200" height="200">
             <p>¡Disfruta del sabor cítrico y revitalizante de nuestras naranjas! Con un toque de dulzura natural y una explosión de vitamina C, son la opción ideal para refrescar tu día de manera saludable.</p>
             <button onclick="window.location.href='compra.html'">Comprar</button>
         </div>
@@ -26,7 +26,7 @@
         <div class="product">
             <h2>Manzanas</h2>
             <h4>Kg x 2.700$</h4>
-            <img src="C:\xampp\htdocs\FormularioDesarrolloWeb\manzanas.jpeg" alt="Producto 1" width="200" height="200">
+            <img src="D:\Herramientas III\FormularioElectivaWeb\manzanas.jpeg" alt="Producto 1" width="200" height="200">
             <p>¡Frescas, jugosas y llenas de vitaminas! Las manzanas no solo son deliciosas, sino que también son el snack perfecto para cualquier momento del día. ¡Prueba la frescura en cada mordisco!</p>
             <button onclick="window.location.href='compra.html'">Comprar</button>
         </div>
